@@ -29,11 +29,11 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
@@ -120,7 +120,11 @@ public class ContainerManager implements Lifecycle {
         if (PathFactory.get(System.getProperty("user.home")).resolve(".m2/repository").equals(rootRepo)) {
             final URL nested = classLoaderConfiguration.getParent().getResource("MAVEN-INF/repository");
             if (nested != null) {
-                rootRepo = Paths.get(nested.getFile().replace("file:", ""));
+                try {
+                    rootRepo = Path.of(nested.toURI());
+                } catch (URISyntaxException e) {
+                    info("Cannot convert MAVEN-INF/repository url to path: " + e.getMessage());
+                }
             }
         }
         this.rootRepositoryLocation = rootRepo;
